<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="343dp"
        android:layout_height="380dp"
        android:background="#56ACA4A4"
        app:layout_constraintBottom_toTopOf="@+id/bt_START"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo">

        <TextView
            android:id="@+id/tv_TituloNombre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/tv_TituloNombre"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_Titulo1apell"
            app:layout_constraintEnd_toStartOf="@+id/etNombre"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Titulo1apell"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/tv_Titulo1apell"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_Titulo2apell"
            app:layout_constraintEnd_toStartOf="@+id/etPrimerApellido"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_TituloNombre" />

        <TextView
            android:id="@+id/tv_Titulo2apell"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/tv_Titulo2apell"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/etPrimerApellido2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Titulo1apell" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            android:text="@string/tv_nombre"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/etPrimerApellido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_TituloNombre"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPrimerApellido"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/hint_primerapellido"
            android:inputType="textPersonName"
            android:text="@string/tv_nombre"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/etPrimerApellido2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_Titulo1apell"
            app:layout_constraintTop_toBottomOf="@+id/etNombre"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etPrimerApellido2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/hint_primerapellido"
            android:inputType="textPersonName"
            android:text="@string/tv_nombre"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_Titulo2apell"
            app:layout_constraintTop_toBottomOf="@+id/etPrimerApellido"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="166dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tituloCurso"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/sp_curso"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/tv_Letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Letra"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/sp_letra"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sp_curso"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <Spinner
            android:id="@+id/sp_curso"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/tv_Letra"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/sp_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_Letra"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_CentroEducativo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_CentroEducativo"
            app:layout_constraintBottom_toTopOf="@+id/sp_centro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <Spinner
            android:id="@+id/sp_centro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_CentroEducativo"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="242dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bt_START"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_empezar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvtitulo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>